<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.DetailActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgProfilePhoto"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgProfilePhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="16dp"
            android:textColor="@color/colorTextWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/name" />

        <LinearLayout
            android:id="@+id/linearInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProfileName"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextWhite"
                android:textStyle="italic"
                tools:text="@string/company" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:src="@drawable/ic_baseline_brightness_1_24" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textColor="@color/colorTextWhite"
                android:textStyle="italic"
                tools:text="@string/location" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/linearInfo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repositories"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvRepository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followings"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>